# robotiq

robotiq_2f_85_gripper_visualization/config/: robotiq_2f_85_control.yaml
robotiq_2f_85_gripper_visualization/launch/: 2f_85_model.launch
robotiq_2f_85_gripper_visualization/meshes/visual/: robotiq_arg2f_85_base_link.dae
robotiq_2f_85_gripper_visualization/urdf/: gazebo.urdf.xacro  robotiq_arg2f.xacro  robotiq_arg2f_85_model.xacro  robotiq_arg2f_85_model_macro.xacro  robotiq_arg2f_transmission.xacro
robotiq_2f_gripper_action_server/include/robotiq_2f_gripper_action_server/: robotiq_2f_gripper_action_server.h
robotiq_2f_gripper_action_server/launch/: robotiq_2f_gripper_action_server_gazebo.launch  robotiq_2f_gripper_action_server_rtu.launch
robotiq_2f_gripper_action_server/src/: robotiq_2f_gripper_action_server.cpp  robotiq_2f_gripper_action_server_client_test.cpp  robotiq_2f_gripper_action_server_node.cpp
robotiq_2f_gripper_control/: CMakeLists.txt  package.xml
robotiq_2f_gripper_control/models/: cube.sdf
robotiq_2f_gripper_control/nodes/: Robotiq2FGripperRtuNode.py  Robotiq2FGripperSimpleController.py  backup_code  gripper_external.py  gripper_to_position.py  pras_pnp.py  simple_pnp.py  simple_pnp_gazebo.py  simple_pnp_gripper.py
robotiq_2f_gripper_control/srv/: move_robot.srv  update_state.srv
robotiq_2f_gripper_gazebo/: CMakeLists.txt  package.xml
robotiq_2f_gripper_gazebo/launch/: robotiq_gripper_empty_world.launch
robotiq_2f_gripper_gazebo_plugins/: CMakeLists.txt  package.xml
robotiq_2f_gripper_gazebo_plugins/cfg/: PID.cfg
robotiq_2f_gripper_gazebo_plugins/include/robotiq_2f_gripper_gazebo_plugins/: Robotiq2fPlugin.h
robotiq_2f_gripper_gazebo_plugins/src/: Robotiq2fPlugin.cpp
robotiq_2f_gripper_joint_state_publisher/: CMakeLists.txt  README.md  package.xml
robotiq_2f_gripper_joint_state_publisher/src/: robotiq_2f_gripper_joint_states.cpp
robotiq_3f_gripper_articulated_gazebo/: package.xml
